[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/NickNameEdit.gd" type="Script" id=2]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NickNameEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -116.0
margin_right = 172.0
margin_bottom = -76.0
align = 1
max_length = 16
placeholder_text = "Pseudonyme"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -31.5
margin_right = 215.0
margin_bottom = 31.5
custom_fonts/font = SubResource( 1 )
text = "PLEIN Ã‰CRAN"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomizeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.0
margin_top = 64.5
margin_right = 234.0
margin_bottom = 127.5
custom_fonts/font = SubResource( 1 )
text = "CHANGER FOND"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 160.5
margin_right = 120.0
margin_bottom = 223.5
custom_fonts/font = SubResource( 1 )
text = "RETOUR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_right = -64.0
margin_bottom = -16.0
window_title = "Ouvrir un fichier"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
current_dir = "/home/alexandre/Documents/Projets/ping-blast"
current_path = "/home/alexandre/Documents/Projets/ping-blast/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="NickNameEdit" to="NickNameEdit" method="name_apply"]
[connection signal="pressed" from="FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
